--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,17 +4,36 @@ stages:
   - push
   - deploy
 
-# 1. Tahap Keamanan (SAST)
+variables:
+  DOCKER_IMAGE: $DOCKER_USER/python-app
+
+# 1. SAST
 sast_scan:
   stage: sast
   image: python:3.9-slim
   script:
     - pip install bandit
-    - bandit -r . -ll
+    - bandit -r app/ # Scan folder app saja
 
-# 2. Tahap Build & Push ke Docker Hub
-build_and_push:
+# 2. BUILD
+build_job:
   stage: build
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  variables:
+    DOCKER_TLS_CERTDIR: ""
+  script:
+    - docker build -t $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA .
+    - docker save $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA > app_image.tar
+  artifacts:
+    paths:
+      - app_image.tar
+    expire_in: 1 hour
+
+# 3. PUSH
+push_job:
+  stage: push
   image: docker:20.10.16
   services:
     - docker:20.10.16-dind
@@ -23,15 +42,16 @@ build_and_push:
   before_script:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
   script:
-    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-    - docker build -t $DOCKER_USER/python-app:latest .
-    - docker push $DOCKER_USER/python-app:latest
+    - docker load < app_image.tar
+    - docker tag $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA $DOCKER_IMAGE:latest
+    - docker push $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA
+    - docker push $DOCKER_IMAGE:latest
 
-# 3. Tahap Deploy (Simulasi)
-deploy_app:
+# 4. DEPLOY
+deploy_job:
   stage: deploy
   script:
-    - echo "Menarik image terbaru dari Docker Hub"
-    - echo "Aplikasi berhasil di-deploy ke environment target."
+    - echo "Deploying image $DOCKER_IMAGE:latest"
+    - echo "Aplikasi berjalan di port 5000"
   only:
     - main
