--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,52 +6,57 @@ stages:
 
 variables:
   DOCKER_IMAGE: $DOCKER_USER/sast-scan-test
+  # Menggunakan commit SHA agar setiap build punya versi unik di K8s
+  IMAGE_TAG: $CI_COMMIT_SHORT_SHA 
 
-# 1. SAST
-SAST:
+# 1. SAST (Security Scan)
+sast_scan:
   stage: sast
   image: python:3.9-slim
   script:
     - pip install bandit
-    - bandit -r app/ # Scan folder app saja
+    - bandit -r app/
 
 # 2. BUILD
-BUILD:
+build_job:
   stage: build
   image: docker:20.10.16
   services:
     - docker:20.10.16-dind
-  variables:
-    DOCKER_TLS_CERTDIR: ""
   script:
-    - docker build -t $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA .
-    - docker save $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA > app_image.tar
+    - docker build -t $DOCKER_IMAGE:$IMAGE_TAG .
+    - docker save $DOCKER_IMAGE:$IMAGE_TAG > app_image.tar
   artifacts:
     paths:
       - app_image.tar
     expire_in: 1 hour
 
 # 3. PUSH
-PUSH:
+push_job:
   stage: push
   image: docker:20.10.16
   services:
     - docker:20.10.16-dind
-  variables:
-    DOCKER_TLS_CERTDIR: ""
   before_script:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
   script:
     - docker load < app_image.tar
-    - docker tag $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA $DOCKER_IMAGE:latest
-    - docker push $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA
+    - docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest
+    - docker push $DOCKER_IMAGE:$IMAGE_TAG
     - docker push $DOCKER_IMAGE:latest
 
-# 4. DEPLOY
-DEPLOY:
+# 4. DEPLOY (Kubernetes)
+deploy_to_k8s:
   stage: deploy
+  image: bitnami/kubectl:latest
   script:
-    - echo "Deploying image $DOCKER_IMAGE:latest"
-    - echo "Aplikasi berjalan di port 5000"
+    - echo "--- VALIDASI MANIFEST ---"
+    - kubectl apply --dry-run=client -f k8s/
+    - echo "--- UPDATE IMAGE DI MANIFEST ---"
+    # Mengganti placeholder image di YAML dengan image yang baru saja di-push
+    - sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
+    - echo "Deployment berhasil divalidasi. Siap dideploy ke Minikube."
+    - echo "Jalankan perintah ini di WSL Anda:"
+    - echo "git pull origin main && kubectl apply -f k8s/"
   only:
     - main
