--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-service
+  name: flask-app-service
 spec:
   type: NodePort
   selector:
-    app: hello-devops
+    app: flask-web
   ports:
-  - port: 5000
-    targetPort: 5000
+    - port: 80
+      targetPort: 5000
+      nodePort: 30001
