fix: script syntax in deploy job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,18 +66,13 @@ deploy_job:
   stage: deploy
   image: alpine:latest
   script:
-    - |
-      if [ "$CI_COMMIT_BRANCH" == "main" ]; then
-        NAMESPACE="default"
-        PORT="30001"
-      else
-        NAMESPACE="staging"
-        PORT="30002"
-      fi
+    # Menentukan variabel berdasarkan branch
+    - if [ "$CI_COMMIT_BRANCH" == "main" ]; then NAMESPACE="default"; PORT="30001"; else NAMESPACE="staging"; PORT="30002"; fi
+    # Menjalankan sed perintah demi perintah
     - sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
     - sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
     - sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
     - sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
-    - echo "Manifest updated for $NAMESPACE environment."
+    - echo "Manifest updated for $NAMESPACE environment using image $DOCKER_IMAGE:$IMAGE_TAG"
   rules:
     - if: $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "staging"
