--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,12 +26,13 @@ sonarqube_check:
   stage: sast
   image: sonarsource/sonar-scanner-cli:latest
   tags:
-    - assistx  # Sesuaikan dengan tag biru di dashboard GitLab Anda
+    - assistx
   script:
-  - sonar-scanner 
-  - Dsonar.host.url=http://host.docker.internal:9000 
-  - Dsonar.login=$SONAR_TOKEN
-  allow_failure: true
+    - sonar-scanner 
+      -Dsonar.projectKey=sast-project 
+      -Dsonar.sources=. 
+      -Dsonar.host.url=http://10.106.24.13:9000 
+      -Dsonar.login=$SONAR_TOKEN
 
 # 2. Build
 build_job:
