--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run Bandit (SAST)
         run: |
           pip install bandit
-          bandit -r app/ || echo "Bandit found some issues"
+          bandit -r app/ || echo "Issues found"
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v3
@@ -39,19 +39,16 @@ jobs:
             -Dsonar.python.version=3
 
   build-and-push:
-    name: Build and Push Docker Image
+    name: Build and Push
     needs: sast
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      
+      - uses: actions/checkout@v4
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build and Push
         uses: docker/build-push-action@v5
         with:
@@ -62,13 +59,11 @@ jobs:
             ${{ secrets.DOCKER_USER }}/sast-scan-test:latest
 
   deploy-config:
-    name: Update Kubernetes Manifests
+    name: Update Manifests
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      
+      - uses: actions/checkout@v4
       - name: Configure Manifests
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/staging" ]]; then
@@ -78,15 +73,11 @@ jobs:
             NAMESPACE="default"
             PORT="30001"
           fi
-          
           sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
           sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
           sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
           sed -i "s|image:.*|image: ${{ secrets.DOCKER_USER }}/sast-scan-test:${{ github.sha }}|g" k8s/deployment.yaml
-          
-          echo "Manifests updated for $NAMESPACE environment"
-
-      - name: Upload Manifest Artifact
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: k8s-manifests
