--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,16 +11,14 @@ variables:
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
   SONAR_HOST_URL: "https://sonarcloud.io"
 
-# 1. SAST (Bandit)
 sast_bandit:
   stage: sast
   image: python:3.9-slim
   script:
-    - pip install bandit
-    - bandit -r app/
+    - 'pip install bandit'
+    - 'bandit -r app/'
   allow_failure: false
 
-# 2. SonarCloud Scan (Pastikan sonar-project.properties sudah ada di root)
 sonarqube_check:
   stage: sast
   image: 
@@ -36,24 +34,22 @@ sonarqube_check:
   tags:
     - assistx
   script:
-    - sonar-scanner -Dsonar.login=$SONAR_TOKEN
+    - 'sonar-scanner -Dsonar.login=$SONAR_TOKEN'
   allow_failure: true
 
-# 3. Build
 build_job:
   stage: build
   image: docker:24.0.5
   services:
     - docker:24.0.5-dind
   script:
-    - docker build -t $DOCKER_IMAGE:$IMAGE_TAG .
-    - docker save $DOCKER_IMAGE:$IMAGE_TAG > app_image.tar
+    - 'docker build -t $DOCKER_IMAGE:$IMAGE_TAG .'
+    - 'docker save $DOCKER_IMAGE:$IMAGE_TAG > app_image.tar'
   artifacts:
     paths:
       - app_image.tar
     expire_in: 1 hour
 
-# 4. Security Check (Trivy)
 trivy_scan:
   stage: security_check
   image: 
@@ -62,9 +58,8 @@ trivy_scan:
   dependencies:
     - build_job
   script:
-    - trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1
+    - 'trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1'
 
-# 5. Push Image
 push_job:
   stage: push
   image: docker:24.0.5
@@ -75,31 +70,23 @@ push_job:
       artifacts: true
     - job: trivy_scan
   before_script:
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
+    - 'echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin'
   script:
-    - docker load < app_image.tar
-    - docker push $DOCKER_IMAGE:$IMAGE_TAG
-    - docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest
-    - docker push $DOCKER_IMAGE:latest
+    - 'docker load < app_image.tar'
+    - 'docker push $DOCKER_IMAGE:$IMAGE_TAG'
+    - 'docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest'
+    - 'docker push $DOCKER_IMAGE:latest'
 
-# 6. Deploy (PERBAIKAN SINTAKS SCRIPT)
 deploy_job:
   stage: deploy
   image: alpine:latest
   script:
-    - apk add --no-cache sed
-    - |
-      if [ "$CI_COMMIT_BRANCH" == "main" ]; then
-        NAMESPACE="default"
-        PORT="30001"
-      else
-        NAMESPACE="staging"
-        PORT="30002"
-      fi
-    - sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
-    - sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
-    - sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
-    - sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
-    - echo "Successfully updated manifest for $NAMESPACE environment."
+    - 'apk add --no-cache sed'
+    - 'if [ "$CI_COMMIT_BRANCH" == "main" ]; then NAMESPACE="default"; PORT="30001"; else NAMESPACE="staging"; PORT="30002"; fi'
+    - 'sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml'
+    - 'sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml'
+    - 'sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml'
+    - 'sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml'
+    - 'echo "Deployment updated for $NAMESPACE"'
   rules:
     - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "staging"'
