--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ sast_bandit:
     - 'bandit -r app/'
   allow_failure: false
 
-sonarqube_check:
+ssonarqube_check:
   stage: sast
   image: 
     name: sonarsource/sonar-scanner-cli:latest
@@ -27,14 +27,7 @@ sonarqube_check:
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
-  cache:
-    key: "${CI_JOB_NAME}"
-    paths:
-      - .sonar/cache
-  tags:
-    - assistx
   script:
-    # Update: Menggunakan -Dsonar.token menggantikan -Dsonar.login
     - 'sonar-scanner -Dsonar.token=$SONAR_TOKEN'
   allow_failure: true
 
