--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,13 @@ sonarqube_check:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
   script:
-    - 'sonar-scanner -Dsonar.token=$SONAR_TOKEN'
+    - |
+      sonar-scanner \
+        -Dsonar.token=$SONAR_TOKEN \
+        -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+        -Dsonar.organization=$SONAR_ORG_KEY \
+        -Dsonar.sources=. \
+        -Dsonar.host.url=$SONAR_HOST_URL
   allow_failure: true
 
 build_job:
