Chore: Reset SonarCloud baseline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,6 +35,8 @@ jobs:
           args: >
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.organization=${{ secrets.SONAR_ORG_KEY }}
+            -Dsonar.sources=app/
+            -Dsonar.python.version=3
             -Dsonar.qualitygate.wait=true
 
   build-and-scan:
