lab: add unit tests and coverage for GitLab & GitHub

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,13 @@ jobs:
         with:
           fetch-depth: 0
 
+# --- TAMBAHKAN LANGKAH INI ---
+      - name: Install dependencies & Run Tests
+        run: |
+          pip install pytest pytest-cov
+          # Menjalankan test dan menghasilkan laporan coverage dalam format XML
+          pytest --cov=app --cov-report=xml tests/
+
       - name: Run Bandit (Python SAST)
         run: |
           pip install bandit
