--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,13 +27,21 @@ sonarqube_check:
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
+  before_script:
+    # Kita butuh python dan pip untuk menjalankan test di dalam image sonar
+    - apk add --no-cache python3 py3-pip
+    - pip install pytest pytest-cov --break-system-packages
   script:
+    # 1. Jalankan test dan buat laporan coverage
+    - pytest --cov=app --cov-report=xml tests/
+    # 2. Jalankan scanner dengan mengarahkan ke laporan tersebut
     - |
       sonar-scanner \
         -Dsonar.token=$SONAR_TOKEN \
         -Dsonar.projectKey=$SONAR_PROJECT_KEY \
         -Dsonar.organization=$SONAR_ORG_KEY \
         -Dsonar.sources=. \
+        -Dsonar.python.coverage.reportPaths=coverage.xml \
         -Dsonar.host.url=$SONAR_HOST_URL
   allow_failure: true
 
