--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,13 +28,13 @@ sonarqube_check:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
   before_script:
-    # Kita butuh python dan pip untuk menjalankan test di dalam image sonar
-    - apk add --no-cache python3 py3-pip
-    - pip install pytest pytest-cov --break-system-packages
+    # Gunakan dnf karena image terbaru berbasis Amazon Linux
+    - dnf install -y python3 python3-pip
+    - pip3 install pytest pytest-cov
   script:
-    # 1. Jalankan test dan buat laporan coverage
+    # 1. Jalankan test
     - pytest --cov=app --cov-report=xml tests/
-    # 2. Jalankan scanner dengan mengarahkan ke laporan tersebut
+    # 2. Jalankan scanner
     - |
       sonar-scanner \
         -Dsonar.token=$SONAR_TOKEN \
