--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,37 +1,31 @@
-name: DevSecOps Full Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main", "staging" ]
-  pull_request:
-    branches: [ "main", "staging" ]
+    branches: [ main, staging ]
 
 env:
   DOCKER_USER: "kikyputraa"
   DOCKER_IMAGE: "kikyputraa/sast-scan-test"
-  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
-  # --- STAGE 1: SAST (Security Static Analysis) ---
-  sast:
-    name: Security Analysis
+  sast_and_test:
+    name: Code Analysis & Testing
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-# --- TAMBAHKAN LANGKAH INI ---
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
       - name: Install dependencies & Run Tests
         run: |
           pip install pytest pytest-cov
-          # Menjalankan test dan menghasilkan laporan coverage dalam format XML
           pytest --cov=app --cov-report=xml tests/
-
-      - name: Run Bandit (Python SAST)
-        run: |
-          pip install bandit
-          bandit -r app/ || true # Tetap lanjut meski ada temuan (untuk demo)
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
@@ -43,95 +37,60 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.organization=${{ secrets.SONAR_ORG_KEY }}
             -Dsonar.sources=.
-            -Dsonar.host.url=https://sonarcloud.io
-        continue-on-error: true
+            -Dsonar.python.coverage.reportPaths=coverage.xml
 
-  # --- STAGE 2: BUILD ---
-  build:
-    name: Build Image
-    needs: sast
+  build_and_security:
+    name: Build and Security Scan
+    needs: sast_and_test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build and Save Image
-        run: |
-          docker build -t $DOCKER_IMAGE:$IMAGE_TAG .
-          docker save $DOCKER_IMAGE:$IMAGE_TAG > app_image.tar
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-image
-          path: app_image.tar
-          retention-days: 1
 
-  # --- STAGE 3: SECURITY CHECK (Container Scan) ---
-  security_check:
-    name: Container Scan
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app-image
-      - name: Run Trivy Scan
+      - name: Build Docker Image
+        run: docker build -t ${{ env.DOCKER_IMAGE }}:${{ github.sha }} .
+
+      - name: Run Trivy Vulnerability Scanner
         uses: aquasecurity/trivy-action@master
         with:
-          input: 'app_image.tar'
-          severity: 'HIGH,CRITICAL'
-          exit-code: '0' # Ubah ke '1' jika ingin menghentikan pipeline saat ada celah
+          image-ref: '${{ env.DOCKER_IMAGE }}:${{ github.sha }}'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
 
-  # --- STAGE 4: PUSH ---
-  push:
-    name: Push to Docker Hub
-    needs: [build, security_check]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app-image
       - name: Login to Docker Hub
+        if: success()
         uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Load and Push
-        run: |
-          docker load < app_image.tar
-          docker push $DOCKER_IMAGE:$IMAGE_TAG
-          docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest
-          docker push $DOCKER_IMAGE:latest
 
-  # --- STAGE 5: DEPLOY (Self-Healing K8s) ---
+      - name: Push Image
+        if: success()
+        run: |
+          docker push ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
+          docker tag ${{ env.DOCKER_IMAGE }}:${{ github.sha }} ${{ env.DOCKER_IMAGE }}:latest
+          docker push ${{ env.DOCKER_IMAGE }}:latest
+
   deploy:
     name: Deploy to K8s
-    needs: push
-    runs-on: self-hosted # Menggunakan Runner WSL Anda
+    needs: build_and_security
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Update and Apply Manifests
+
+      - name: Prepare Manifests
         run: |
-          # 1. Tentukan Environment
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+          if [ "${{ github.ref_name }}" == "main" ]; then
             NAMESPACE="default"
             PORT="30001"
           else
             NAMESPACE="staging"
             PORT="30002"
           fi
-
-          # 2. Buat Namespace otomatis jika belum ada (PENTING!)
-          kubectl create namespace $NAMESPACE --dry-run=client -o yaml | kubectl apply -f -
-
-          # 3. Injeksi variabel ke file YAML
           sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
           sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
           sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
-          sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
-
-          # 4. Deploy ke Cluster
-          kubectl apply -f k8s/deployment.yaml -n $NAMESPACE
-          kubectl apply -f k8s/service.yml -n $NAMESPACE
-          
-          echo "✅ Deployment ke $NAMESPACE berhasil!"# Manual Trigger
+          sed -i "s|image:.*|image: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}|g" k8s/deployment.yaml
+          echo "Deployment ready for $NAMESPACE"
