--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ variables:
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
   SONAR_HOST_URL: "https://sonarcloud.io"
 
-# 1. SAST - Unit Testing (Untuk menaikkan Coverage agar Quality Gate Hijau)
+# Menjalankan test di image Python untuk menghindari masalah permission dnf/apk
 unit_test:
   stage: sast
   image: python:3.9-slim
@@ -23,16 +23,14 @@ unit_test:
       - coverage.xml
     expire_in: 1 hour
 
-# 2. SAST - Bandit (Scan keamanan kode Python)
 sast_bandit:
   stage: sast
   image: python:3.9-slim
   script:
-    - 'pip install bandit'
-    - 'bandit -r app/'
+    - pip install bandit
+    - bandit -r app/
   allow_failure: false
 
-# 3. SAST - SonarCloud (Analisis Kualitas Kode)
 sonarqube_check:
   stage: sast
   image: 
@@ -55,21 +53,19 @@ sonarqube_check:
         -Dsonar.host.url=$SONAR_HOST_URL
   allow_failure: true
 
-# 4. BUILD - Membuat Image Docker
 build_job:
   stage: build
   image: docker:24.0.5
   services:
     - docker:24.0.5-dind
   script:
-    - 'docker build -t $DOCKER_IMAGE:$IMAGE_TAG .'
-    - 'docker save $DOCKER_IMAGE:$IMAGE_TAG > app_image.tar'
+    - docker build -t $DOCKER_IMAGE:$IMAGE_TAG .
+    - docker save $DOCKER_IMAGE:$IMAGE_TAG > app_image.tar
   artifacts:
     paths:
       - app_image.tar
     expire_in: 1 hour
 
-# 5. SECURITY CHECK - Scan Image menggunakan Trivy
 trivy_scan:
   stage: security_check
   image: 
@@ -78,9 +74,8 @@ trivy_scan:
   dependencies:
     - build_job
   script:
-    - 'trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1'
+    - trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1
 
-# 6. PUSH - Mengirim Image ke Docker Hub
 push_job:
   stage: push
   image: docker:24.0.5
@@ -91,24 +86,23 @@ push_job:
       artifacts: true
     - job: trivy_scan
   before_script:
-    - 'echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin'
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
   script:
-    - 'docker load < app_image.tar'
-    - 'docker push $DOCKER_IMAGE:$IMAGE_TAG'
-    - 'docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest'
-    - 'docker push $DOCKER_IMAGE:latest'
+    - docker load < app_image.tar
+    - docker push $DOCKER_IMAGE:$IMAGE_TAG
+    - docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest
+    - docker push $DOCKER_IMAGE:latest
 
-# 7. DEPLOY - Update Manifest Kubernetes (Dummy/Sed)
 deploy_job:
   stage: deploy
   image: alpine:latest
   script:
-    - 'apk add --no-cache sed'
-    - 'if [ "$CI_COMMIT_BRANCH" == "main" ]; then NAMESPACE="default"; PORT="30001"; else NAMESPACE="staging"; PORT="30002"; fi'
-    - 'sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml'
-    - 'sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml'
-    - 'sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml'
-    - 'sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml'
-    - 'echo "Deployment manifest updated for $NAMESPACE on port $PORT"'
+    - apk add --no-cache sed
+    - if [ "$CI_COMMIT_BRANCH" == "main" ]; then NAMESPACE="default"; PORT="30001"; else NAMESPACE="staging"; PORT="30002"; fi
+    - sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
+    - sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
+    - sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
+    - sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
+    - echo "Deployment updated for $NAMESPACE"
   rules:
     - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "staging"'
