--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ variables:
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
   SONAR_HOST_URL: "https://sonarcloud.io"
 
-# Menjalankan test di image Python untuk menghindari masalah permission dnf/apk
 unit_test:
   stage: sast
   image: python:3.9-slim
@@ -43,14 +42,14 @@ sonarqube_check:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
   script:
-    - |
-      sonar-scanner \
-        -Dsonar.token=$SONAR_TOKEN \
-        -Dsonar.projectKey=$SONAR_PROJECT_KEY \
-        -Dsonar.organization=$SONAR_ORG_KEY \
-        -Dsonar.sources=. \
-        -Dsonar.python.coverage.reportPaths=coverage.xml \
-        -Dsonar.host.url=$SONAR_HOST_URL
+    - >
+      sonar-scanner 
+      -Dsonar.token=$SONAR_TOKEN 
+      -Dsonar.projectKey=$SONAR_PROJECT_KEY 
+      -Dsonar.organization=$SONAR_ORG_KEY 
+      -Dsonar.sources=. 
+      -Dsonar.python.coverage.reportPaths=coverage.xml 
+      -Dsonar.host.url=$SONAR_HOST_URL
   allow_failure: true
 
 build_job:
@@ -98,11 +97,19 @@ deploy_job:
   image: alpine:latest
   script:
     - apk add --no-cache sed
-    - if [ "$CI_COMMIT_BRANCH" == "main" ]; then NAMESPACE="default"; PORT="30001"; else NAMESPACE="staging"; PORT="30002"; fi
-    - sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
-    - sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
-    - sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
-    - sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
-    - echo "Deployment updated for $NAMESPACE"
+    # PERBAIKAN: Gunakan format baris tunggal atau kutipan yang benar untuk logika shell
+    - |
+      if [ "$CI_COMMIT_BRANCH" == "main" ]; then
+        NAMESPACE="default"
+        PORT="30001"
+      else
+        NAMESPACE="staging"
+        PORT="30002"
+      fi
+      sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
+      sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
+      sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
+      sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
+      echo "Deployment updated for $NAMESPACE on port $PORT"
   rules:
     - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "staging"'
