--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Install dependencies & Run Tests
         run: |
           pip install pytest pytest-cov
+          # Menghasilkan coverage.xml untuk SonarCloud
           pytest --cov=app --cov-report=xml tests/
 
       - name: SonarCloud Scan
@@ -38,6 +39,7 @@ jobs:
             -Dsonar.organization=${{ secrets.SONAR_ORG_KEY }}
             -Dsonar.sources=.
             -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.qualitygate.wait=false
 
   build_and_security:
     name: Build and Security Scan
@@ -60,14 +62,12 @@ jobs:
           severity: 'CRITICAL,HIGH'
 
       - name: Login to Docker Hub
-        if: success()
         uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Image
-        if: success()
         run: |
           docker push ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
           docker tag ${{ env.DOCKER_IMAGE }}:${{ github.sha }} ${{ env.DOCKER_IMAGE }}:latest
