fix: resolve k8s resource issues and test code smells

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,12 +48,12 @@ jobs:
         with:
           name: coverage-report
       - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v5
+        uses: SonarSource/sonarqube-scan-action@v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          # Scanner otomatis membaca sonar-project.properties
+          # Argumen kosong atau minimal, biarkan scanner membaca sonar-project.properties
           args: >
             -Dsonar.python.coverage.reportPaths=coverage.xml
             -Dsonar.qualitygate.wait=false
