--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,10 @@ variables:
   DOCKER_USER: "kikyputraa"
   DOCKER_IMAGE: $DOCKER_USER/sast-scan-test
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
+  # Host URL tetap di sini agar fleksibel jika pindah ke Self-Managed SonarQube
+  SONAR_HOST_URL: "https://sonarcloud.io"
 
+# 1. SAST - Unit Testing & Coverage
 unit_test:
   stage: sast
   image: python:3.9-slim
@@ -21,13 +24,16 @@ unit_test:
       - coverage.xml
     expire_in: 1 hour
 
+# 2. SAST - Bandit Security Scan
 sast_bandit:
   stage: sast
   image: python:3.9-slim
   script:
     - pip install bandit
     - bandit -r app/
+  allow_failure: false
 
+# 3. SAST - SonarCloud Scan (Membaca sonar-project.properties)
 sonarqube_check:
   stage: sast
   image: 
@@ -36,11 +42,19 @@ sonarqube_check:
   needs:
     - job: unit_test
       artifacts: true
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    GIT_DEPTH: "0"
   script:
-    # Cukup panggil sonar-scanner, file properties akan dibaca otomatis
-    - sonar-scanner -Dsonar.token=$SONAR_TOKEN -Dsonar.python.coverage.reportPaths=coverage.xml -Dsonar.qualitygate.wait=false
+    - >
+      sonar-scanner 
+      -Dsonar.token=$SONAR_TOKEN 
+      -Dsonar.python.coverage.reportPaths=coverage.xml 
+      -Dsonar.host.url=$SONAR_HOST_URL
+      -Dsonar.qualitygate.wait=false
   allow_failure: true
 
+# 4. BUILD - Docker Image Creation
 build_job:
   stage: build
   image: docker:24.0.5
@@ -52,7 +66,9 @@ build_job:
   artifacts:
     paths:
       - app_image.tar
+    expire_in: 1 hour
 
+# 5. SECURITY CHECK - Trivy Container Scan
 trivy_scan:
   stage: security_check
   image: 
@@ -63,12 +79,16 @@ trivy_scan:
   script:
     - trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1
 
+# 6. PUSH - Upload to Docker Hub
 push_job:
   stage: push
   image: docker:24.0.5
   services:
     - docker:24.0.5-dind
-  needs: [build_job, trivy_scan]
+  needs: 
+    - job: build_job
+      artifacts: true
+    - job: trivy_scan
   before_script:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
   script:
@@ -77,6 +97,7 @@ push_job:
     - docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest
     - docker push $DOCKER_IMAGE:latest
 
+# 7. DEPLOY - K8s Manifest Update
 deploy_job:
   stage: deploy
   image: alpine:latest
@@ -94,5 +115,6 @@ deploy_job:
       sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
       sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
       sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
+      echo "Deployment updated for $NAMESPACE on port $PORT"
   rules:
     - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "staging"'
