--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,8 +104,8 @@ deploy_job:
         PORT="30002"
       fi
       sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
-      sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
-      sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
+      sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yaml
+      sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yaml
       sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml 
   artifacts:
     paths:
